--- a/blueboxnoc-ui/views/layout.jade
+++ b/blueboxnoc-ui/views/layout.jade
@@ -6,10 +6,6 @@ html
     link(rel="stylesheet", href="/bower_components/ng-admin/build/ng-admin.min.css")
     script(type="text/javascript", src="/bower_components/angular/angular.min.js")
     script(type="text/javascript", src="/bower_components/ng-admin/build/ng-admin.min.js")
-    script.
-        var BlueboxNocApp = angular.module("BlueboxNocApp", []);
-        BlueboxNocApp.controller("HelloCtrl", function($scope) {
-            $scope.name = "Calvin Hobbes";
-        });
+    block jsheader
   body(ng-app="BlueboxNocApp")
     block content
