--- a/blueboxnoc-ui/views/index.jade
+++ b/blueboxnoc-ui/views/index.jade
@@ -3,29 +3,19 @@ extends layout
 block jsheader
     script.
         var BlueboxNocApp = angular.module("BlueboxNocApp", ["ng-admin"]);
-        BlueboxNocApp.controller("HelloCtrl", function($scope) {
-            $scope.name = "Calvin Hobbes";
-        });
+        // https://github.com/marmelab/ng-admin
         BlueboxNocApp.config(function (NgAdminConfigurationProvider, Application, Entity, Field, Reference, ReferencedList, ReferenceMany) {
             // set the main API endpoint for this admin
-            var app = new Application('BlueBoxAPI')
-                    .baseApiUrl('http://localhost:3000/api/');
-            var vpn = new Entity('vpn')
-                .identifier(new Field('id'));
+            var app = new Application('BlueBoxAPI');
+            var vpn = new Entity('./api/vpn')
+                    .label("VPNs")
+                    .identifier(new Field('id'));
             app.addEntity(vpn);
-            if (false) {
-                // set the list of fields to map in each post view
-            vpn.dashboardView().addField(/* see example below */);
-            vpn.listView().addField(/* see example below */);
-            vpn.creationView().addField(/* see example below */);
-            vpn.editionView().addField(/* see example below */);
-            }
+            vpn.dashboardView().title("VPNs").fields([new Field("title").isDetailLink(true)]);
             NgAdminConfigurationProvider.configure(app);
         });
 
 block content
   h1= title
   p Welcome to #{title}
-  div(ng-controller="HelloCtrl")
-    <h2>Hello {{name}} !</h2>
   div(ui-view)
