--- a/blueboxnoc-ui/public/stylesheets/style.css
+++ b/blueboxnoc-ui/public/stylesheets/style.css
@@ -2,7 +2,18 @@ body {
   padding: 5px 50px 50px 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-
+#content {
+    position: relative;
+}
+.logo {
+    position:absolute;
+    top:0;
+    right:0;
+    z-index:1001;
+}
 a {
-  color: #00B7FF;
+    color: #00B7FF;
+}
+h1 {
+    line-height: 100px;
 }
