--- a/blueboxnoc-ui/views/index.jade
+++ b/blueboxnoc-ui/views/index.jade
@@ -8,20 +8,47 @@ block jsheader
             // set the main API endpoint for this admin
             var rootUrl = (location.protocol + '//' + location.hostname +
                 (location.port ? ':' + location.port : ''));
-            var app = new Application('BlueBoxAPI').baseApiUrl(rootUrl + "/api/");
-            NgAdminConfigurationProvider.configure(app);
+            var app = new Application('BlueBoxAPI'). // application main title
+                    baseApiUrl(rootUrl + "/api/"); // main API endpoint
 
-            // VPNs
+            // define all entities at the top to allow references between them
             var vpn = new Entity('vpn')
                     .label("VPNs")
                     .identifier(new Field('title'));
-            app.addEntity(vpn);
 
-            vpn.dashboardView().title("VPNs").fields([new Field("title").isDetailLink(true), new Field("detail")]);
-            vpn.editionView().title("VPN {{entry.values.title}}")
+            var bbx = new Entity('bbx')
+                    .label("BBXs")
+                    .identifier(new Field('title'));
+
+            // set the application entities
+            app
+                .addEntity(vpn)
+                .addEntity(bbx);
+
+            // set the application menu entries
+            vpn.menuView()
+                    .order(1)
+                    .icon('<span class="glyphicon glyphicon-unchecked"></span>');
+            bbx.menuView()
+                    .order(2)
+                    .icon('<span class="glyphicon glyphicon-th"></span>');
+
+            // VPNs
+            vpn.dashboardView().title("VPNs List").fields([new Field("title").isDetailLink(true).label("VPN"), new Field("detail")]);
+            vpn.editionView()
+                    .title("Edit VPN {{entry.values.title}}")
                     .actions(["list", "show", "delete"])
-                    .fields([new Field("title").editable(false).isDetailLink(true), new Field("detail")]);
-            vpn.listView().fields(vpn.editionView().fields());
+                    .fields([
+                        new Field("title").editable(false).isDetailLink(true),
+                        new Field("detail"),
+                        new ReferenceMany('bbxs') // a Reference is a particular type of field that references another entity
+                                .targetEntity(bbx) // the tag entity is defined later in this file
+                                .targetField(new Field('title')) // the field to be displayed in this list
+                                // .cssClasses('css_bboxes') // Sadly this is not working on list view (issue https://github.com/marmelab/ng-admin/issues/309)
+                    ]);
+            vpn.listView()
+                    .title("VPNs List")
+                    .fields(vpn.editionView().fields());
             var titleAtCreationTime = new Field("title").validation({validator: !{VPNTitleValidator}});
             vpn.creationView().fields([
                 titleAtCreationTime,
@@ -33,18 +60,18 @@ block jsheader
             ]);
 
             // BlueBoxes
-            var bbx = new Entity('bbx')
-                    .label("BBXs")
-                    .identifier(new Field('title'));
-            app.addEntity(bbx);
-
-            bbx.dashboardView().title("BlueBoxes").fields([new Field("title").isDetailLink(true), new Field("detail"), new Field("vpn")]);
+            bbx.dashboardView().title("BlueBoxes List").fields([new Field("title").isDetailLink(true).label("BBX"), new Field("detail"), new Field("vpn")]);
             bbx.editionView().title("BBX {{entry.values.title}}")
                     .actions(["list", "show", "delete"])
-                    .fields([new Field("title").editable(false).isDetailLink(true), new Field("vpn"), new Field("detail")]);
-
-            bbx.listView().fields(bbx.editionView().fields());
-            var titleAtCreationTime = new Field("title").validation({validator: !{VPNTitleValidator}});
+                    .fields([
+                        new Field("title").editable(false).isDetailLink(true),
+                        new Field("vpn").editable(false),
+                        new Field("detail")
+                    ]);
+            bbx.listView()
+                    .title("BBXs List")
+                    .fields(bbx.editionView().fields());
+            var titleAtCreationTime = new Field("title").validation({validator: !{BBXTitleValidator}});
             bbx.creationView().fields([
                 titleAtCreationTime,
                 new Field("detail")]);
@@ -55,7 +82,9 @@ block jsheader
                 new Field("BBxVpn").type("template").template('<div ng-controller="HelloWorld">Hello, {{user}}.</div>')
             ]);
 
+            NgAdminConfigurationProvider.configure(app);
         });
+
         // How to slap additional UI on any of the ng-admin pages,
         // e.g. here to access the VNC features
         BlueboxNocApp.controller("HelloWorld", function ($scope) {
@@ -63,8 +92,8 @@ block jsheader
         });
 
 block content
-    img(src='../images/blueboxnoc100.png', class="logo")
+    img(src='../images/blueboxnoc100.png', class="logo", title="BlueBoxNocApp")
     h1
-        a(href='/') #{title}
+        a(href='#/dashboard') #{title}
     div(ui-view)
 
