--- a/blueboxnoc-ui/views/index.jade
+++ b/blueboxnoc-ui/views/index.jade
@@ -4,7 +4,7 @@ block jsheader
     script.
         var BlueboxNocApp = angular.module("BlueboxNocApp", ["ng-admin"]);
         // https://github.com/marmelab/ng-admin
-        BlueboxNocApp.config(function (NgAdminConfigurationProvider, Application, Entity, Field, Reference, ReferencedList, ReferenceMany) {
+        BlueboxNocApp.config(function (NgAdminConfigurationProvider, Application, Entity, Field, Reference, ReferencedList, ReferenceMany, RestangularProvider) {
             // set the main API endpoint for this admin
             var rootUrl = (location.protocol + '//' + location.hostname +
                 (location.port ? ':' + location.port : ''));
