--- a/blueboxnoc-ui/views/index.html
+++ b/blueboxnoc-ui/views/index.html
@@ -86,4 +86,4 @@ BlueboxNocApp.config(function (NgAdminConfigurationProvider, Application, Entity
 BlueboxNocApp.controller("HelloWorld", function ($scope) {
     $scope.user = "Calvin Hobbes";
 });
-</script></head><body ng-app="BlueboxNocApp"><img src="../images/blueboxnoc100.png" title="BlueBoxNocApp" class="logo"><h1><a href="#/dashboard"></a></h1><div ui-view></div></body></html>
+</script></head><body ng-app="BlueboxNocApp"><img src="../images/blueboxnoc100.png" title="BlueBoxNocApp" class="logo"><h1><a href="#/dashboard"></a></h1><div ui-view></div><footer class="footer"><div class="container"><p style="padding-top:20px;float:right" class="text-muted"><a href="https://github.com/epfl-sti/cmi.bluebox"><img src="../images/blue_cube20.png"><Fork> on github</Fork></a></p></div></footer></body></html>
