--- a/blueboxnoc-ui/views/index.jade
+++ b/blueboxnoc-ui/views/index.jade
@@ -96,4 +96,9 @@ block content
     h1
         a(href='#/dashboard') #{title}
     div(ui-view)
-
+    footer(class="footer")
+        div(class="container")
+            p(class="text-muted" style="padding-top:20px;float:right")
+                a(href="https://github.com/epfl-sti/cmi.bluebox")
+                    img(src='../images/blue_cube20.png')
+                    Fork #{title} on github
