--- a/blueboxnoc-ui/views/index.jade
+++ b/blueboxnoc-ui/views/index.jade
@@ -101,4 +101,4 @@ block content
             p(class="text-muted" style="padding-top:20px;float:right")
                 a(href="https://github.com/epfl-sti/cmi.bluebox")
                     img(src='../images/blue_cube20.png')
-                    Fork #{title} on github
+                    span #{title} on github // fork me
