Fancy bluebox icons in the VPN's list

--- a/blueboxnoc-ui/public/stylesheets/style.css
+++ b/blueboxnoc-ui/public/stylesheets/style.css
@@ -17,3 +17,11 @@ a {
 h1 {
     line-height: 100px;
 }
+.bboxes_tag span.label.label-default.ng-binding {
+    background: url(/images/blue_cube20.png) left top;
+    color: black;
+    display: block;
+    float: left;
+    background-repeat: no-repeat;
+    padding-left: 25px;
+}
