--- a/blueboxnoc-ui/views/index.html
+++ b/blueboxnoc-ui/views/index.html
@@ -64,7 +64,7 @@ BlueboxNocApp.config(function (NgAdminConfigurationProvider, Application, Entity
                     .label('Blue Boxes')
                     .targetEntity(bbx) // the tag entity is defined later in this file
                     .targetField(new Field('title')) // the field to be displayed in this list
-                    // .cssClasses('css_bboxes') // Sadly this is not working on list view (issue https://github.com/marmelab/ng-admin/issues/309)
+                    .cssClasses('bboxes_tag')
             ]);
     vpn.listView()
             .title("All VPNs")
